tests/backend/checkmach/test_assume_error.output
File "test_assume_error.ml", line 26, characters 7-17:
Error: Annotation check for zero_alloc failed on function Test_assume_error.A1.foo (camlTest_assume_error.foo_HIDE_STAMP)

File "test_assume_error.ml", line 27, characters 8-11:
Error: called function may allocate (direct call camlTest_assume_error.g_HIDE_STAMP) (test_assume_error.ml:27,8--11;test_assume_error.ml:20,10--13)

File "test_assume_error.ml", line 27, characters 8-11:
Error: called function may allocate (direct call camlTest_assume_error.handle_exn_HIDE_STAMP) (test_assume_error.ml:27,8--11;test_assume_error.ml:22,6--65)

File "test_assume_error.ml", line 53, characters 7-17:
Error: Annotation check for zero_alloc failed on function Test_assume_error.A2.foo (camlTest_assume_error.foo_HIDE_STAMP)

File "test_assume_error.ml", line 56, characters 6-30:
Error: called function may allocate (direct call camlCamlinternalFormat.make_printf_HIDE_STAMP) (test_assume_error.ml:56,6--30;printf.ml:37,17--35;printf.ml:33,21--43;printf.ml:26,2--63)

File "test_assume_error.ml", line 54, characters 16-19:
Error: called function may allocate (direct call camlTest_assume_error.g_HIDE_STAMP) (test_assume_error.ml:54,16--19;test_assume_error.ml:47,10--13)

File "test_assume_error.ml", line 54, characters 16-19:
Error: called function may allocate (direct call camlTest_assume_error.handle_exn_HIDE_STAMP) (test_assume_error.ml:54,16--19;test_assume_error.ml:49,6--65)

File "test_assume_error.ml", line 54, characters 23-28:
Error: allocation of 24 bytes

File "test_assume_error.ml", line 56, characters 6-30:
Error: called function may allocate (indirect call)

File "test_assume_error.ml", line 57, characters 6-11:
Error: allocation of 24 bytes

File "test_assume_error.ml", line 84, characters 7-17:
Error: Annotation check for zero_alloc failed on function Test_assume_error.A3.foo (camlTest_assume_error.foo_HIDE_STAMP)

File "test_assume_error.ml", line 87, characters 6-11:
Error: allocation of 24 bytes

File "test_assume_error.ml", line 170, characters 7-17:
Error: Annotation check for zero_alloc strict failed on function Test_assume_error.A6.f (camlTest_assume_error.f_HIDE_STAMP)

File "test_assume_error.ml", line 171, characters 10-13:
Error: called function may allocate on a path to diverge (direct call camlTest_assume_error.g_HIDE_STAMP)

File "test_assume_error.ml", line 218, characters 7-17:
Error: Annotation check for zero_alloc strict failed on function Test_assume_error.A8.f (camlTest_assume_error.f_HIDE_STAMP)

File "test_assume_error.ml", line 221, characters 6-20:
Error: called function may allocate on a path to exceptional return (direct call camlTest_assume_error.handle_exn_HIDE_STAMP)
